# makima-discord-bot

./: .gitignore  README.md  cookies.txt  createDaemon.sh  create_linux_service.sh  gifs.py  main.py  music.py  nhentai.py  play_youtube.py  prefixes.json  pyproject.toml  requirements.txt  sampleconfig.json  sampleconfig.py  youtube.py  ytplay.py
extensions/: basic.py  gifs.py  nhentai.py  play_youtube.py  twitch_notifications.py
