[tool.poetry]
name = "makima-bot"
version = "0.9.1"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
discord = "^2.3.2"
requests = "^2.32.3"
yt-dlp = "^2024.11.4"
pynacl = "^1.5.0"
numpy = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
